Linked the generated reports to the java.net issue tracker URL
git-svn-id: https://svn.java.net/svn/uispec4j~svn/trunk@5 5be420d8-ef90-e5ee-9322-c1c25d4ab49f

--- a/project.properties
+++ b/project.properties
@@ -10,6 +10,11 @@ maven.junit.fork=yes
 # -------------------------------------------------------------------
 # XDoc look&feel
 # -------------------------------------------------------------------
+maven.changes.issue.template=http://uispec4j.dev.java.net/issues/show_bug.cgi?id=%ISSUE%
+
+# -------------------------------------------------------------------
+# XDoc look&feel
+# -------------------------------------------------------------------
 maven.xdoc.poweredby.image=poweredbydesignup.jpg
 maven.xdoc.poweredby.title=Powered by Design-up
 maven.xdoc.poweredby.url=http://www.design-up.com
