Added clover license location property
git-svn-id: https://svn.java.net/svn/uispec4j~svn/trunk@15 5be420d8-ef90-e5ee-9322-c1c25d4ab49f

--- a/project.properties
+++ b/project.properties
@@ -3,14 +3,19 @@
 # -------------------------------------------------------------------
 maven.javadoc.overview = src/java/org/uispec4j/overview.html
 maven.javadoc.links = http://java.sun.com/j2se/1.4.2/docs/api/,http://www.junit.org/junit/javadoc/3.8.1/
-maven.javadoc.excludepackagenames=org.uispec4j.xml,org.uispec4j.utils,org.uispec4j.loader
+maven.javadoc.excludepackagenames=org.uispec4j.xml,org.uispec4j.utils,org.uispec4j.loader,org.uispec4j.interception.handlers,org.uispec4j.interception.toolkit,org.uispec4j.interception.ui
 maven.javadoc.package=no
 maven.junit.fork=yes
 
 # -------------------------------------------------------------------
-# XDoc look&feel
+# Issues linking
 # -------------------------------------------------------------------
 maven.changes.issue.template=http://uispec4j.dev.java.net/issues/show_bug.cgi?id=%ISSUE%
+
+# -------------------------------------------------------------------
+# Clover
+# -------------------------------------------------------------------
+maven.clover.license.path=clover.license
 
 # -------------------------------------------------------------------
 # XDoc look&feel
