--- a/project.properties
+++ b/project.properties
@@ -1,3 +1,5 @@
+maven.repo.remote=http://repo1.maven.org/maven
+
 # -------------------------------------------------------------------
 # Javadoc
 # -------------------------------------------------------------------
