--- a/project.properties
+++ b/project.properties
@@ -5,7 +5,7 @@ maven.repo.remote=http://repo1.maven.org/maven
 # -------------------------------------------------------------------
 maven.javadoc.overview = src/java/org/uispec4j/overview.html
 maven.javadoc.links = http://java.sun.com/j2se/1.4.2/docs/api/,http://www.junit.org/junit/javadoc/3.8.1/
-maven.javadoc.excludepackagenames=org.uispec4j.xml,org.uispec4j.utils,org.uispec4j.loader,org.uispec4j.interception.handlers,org.uispec4j.interception.toolkit,org.uispec4j.interception.ui
+maven.javadoc.excludepackagenames=org.crossbowlabs.uispec.xml,org.crossbowlabs.uispec.utils,org.crossbowlabs.uispec.loader,org.crossbowlabs.uispec.interception.handlers,org.crossbowlabs.uispec.interception.toolkit,org.crossbowlabs.uispec.interception.ui
 maven.javadoc.package=no
 maven.junit.fork=yes
 
