- changed maven artifactId from "uispec" to "uispec4j"
git-svn-id: https://svn.java.net/svn/uispec4j~svn/trunk@57 5be420d8-ef90-e5ee-9322-c1c25d4ab49f

--- a/addressbook/pom.xml
+++ b/addressbook/pom.xml
@@ -14,7 +14,7 @@
   <dependencies>
     <dependency>
       <groupId>org.uispec4j</groupId>
-      <artifactId>uispec</artifactId>
+      <artifactId>uispec4j</artifactId>
       <version>2.0-SNAPSHOT</version>
       <optional>true</optional>
     </dependency>
