--- a/uispec4j/pom.xml
+++ b/uispec4j/pom.xml
@@ -12,7 +12,7 @@
     <version>2.0-SNAPSHOT</version>
   </parent>
   <groupId>org.uispec4j</groupId>
-  <artifactId>uispec</artifactId>
+  <artifactId>uispec4j</artifactId>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
