--- a/calculator/pom.xml
+++ b/calculator/pom.xml
@@ -7,17 +7,11 @@
   <parent>
     <groupId>org.uispec4j</groupId>
     <artifactId>uispec4j-root</artifactId>
-    <version>2.1-SNAPSHOT</version>
+    <version>2.2-SNAPSHOT</version>
   </parent>
   <groupId>org.uispec4j</groupId>
   <artifactId>calculator</artifactId>
   <dependencies>
-    <dependency>
-      <groupId>org.uispec4j</groupId>
-      <artifactId>uispec4j</artifactId>
-      <version>2.1-SNAPSHOT</version>
-      <scope>test</scope>
-    </dependency>
     <dependency>
       <groupId>org.testng</groupId>
       <artifactId>testng</artifactId>
@@ -65,5 +59,38 @@
       </plugin>
     </plugins>
   </build>
+
+    <profiles>
+      <profile>
+        <id>jdk15</id>
+        <activation>
+          <jdk>1.5</jdk>
+        </activation>
+          <dependencies>
+              <dependency>
+                <groupId>org.uispec4j</groupId>
+                <artifactId>uispec4j</artifactId>
+                <version>${pom.version}</version>
+                <scope>test</scope>
+                <classifier>jdk15</classifier>
+              </dependency>
+          </dependencies>
+      </profile>
+      <profile>
+        <id>jdk16</id>
+        <activation>
+          <jdk>1.6</jdk>
+        </activation>
+      <dependencies>
+          <dependency>
+            <groupId>org.uispec4j</groupId>
+            <artifactId>uispec4j</artifactId>
+            <version>${pom.version}</version>
+            <scope>test</scope>
+            <classifier>jdk16</classifier>
+          </dependency>
+      </dependencies>
+      </profile>
+    </profiles>
 
 </project>
