--- a/uispec4j/pom.xml
+++ b/uispec4j/pom.xml
@@ -15,7 +15,7 @@
 
   <groupId>org.uispec4j</groupId>
   <artifactId>uispec4j</artifactId>
-  <version>2.3-SNAPSHOT</version>
+  <version>2.4-SNAPSHOT</version>
 
   <dependencies>
     <dependency>
@@ -136,7 +136,19 @@
           <forkMode>once</forkMode>
         </configuration>
       </plugin>
-    </plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-gpg-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>sign-artifacts</id>
+            <phase>verify</phase>
+            <goals>
+              <goal>sign</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>    </plugins>
   </build>
 
   <reporting>
