--- a/addressbook/pom.xml
+++ b/addressbook/pom.xml
@@ -60,7 +60,7 @@
   </build>
     <profiles>
       <profile>
-        <id>jdk15</id>
+        <id>jdk5</id>
         <activation>
           <jdk>1.5</jdk>
         </activation>
@@ -69,12 +69,12 @@
                 <groupId>org.uispec4j</groupId>
                 <artifactId>uispec4j</artifactId>
                 <version>${pom.version}</version>
-                <classifier>jdk15</classifier>
+                <classifier>jdk5</classifier>
               </dependency>
           </dependencies>
       </profile>
       <profile>
-        <id>jdk16</id>
+        <id>jdk6</id>
         <activation>
           <jdk>1.6</jdk>
         </activation>
@@ -83,7 +83,21 @@
             <groupId>org.uispec4j</groupId>
             <artifactId>uispec4j</artifactId>
             <version>${pom.version}</version>
-            <classifier>jdk16</classifier>
+            <classifier>jdk6</classifier>
+          </dependency>
+      </dependencies>
+      </profile>
+      <profile>
+        <id>jdk7</id>
+        <activation>
+          <jdk>1.7</jdk>
+        </activation>
+      <dependencies>
+          <dependency>
+            <groupId>org.uispec4j</groupId>
+            <artifactId>uispec4j</artifactId>
+            <version>${pom.version}</version>
+            <classifier>jdk7</classifier>
           </dependency>
       </dependencies>
       </profile>
