--- a/calculator/pom.xml
+++ b/calculator/pom.xml
@@ -62,7 +62,7 @@
 
     <profiles>
       <profile>
-        <id>jdk15</id>
+        <id>jdk5</id>
         <activation>
           <jdk>1.5</jdk>
         </activation>
@@ -72,12 +72,12 @@
                 <artifactId>uispec4j</artifactId>
                 <version>${pom.version}</version>
                 <scope>test</scope>
-                <classifier>jdk15</classifier>
+                <classifier>jdk5</classifier>
               </dependency>
           </dependencies>
       </profile>
       <profile>
-        <id>jdk16</id>
+        <id>jdk6</id>
         <activation>
           <jdk>1.6</jdk>
         </activation>
@@ -87,7 +87,22 @@
             <artifactId>uispec4j</artifactId>
             <version>${pom.version}</version>
             <scope>test</scope>
-            <classifier>jdk16</classifier>
+            <classifier>jdk6</classifier>
+          </dependency>
+      </dependencies>
+      </profile>
+      <profile>
+        <id>jdk7</id>
+        <activation>
+          <jdk>1.7</jdk>
+        </activation>
+      <dependencies>
+          <dependency>
+            <groupId>org.uispec4j</groupId>
+            <artifactId>uispec4j</artifactId>
+            <version>${pom.version}</version>
+            <scope>test</scope>
+            <classifier>jdk7</classifier>
           </dependency>
       </dependencies>
       </profile>
