Added eclipse configuration files to .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-uispec4j/target/
-uispec4j/tmp/
-calculator/target/
-addressbook/target/
+target/
 tmp/
+.settings/
+.classpath
+.project
 *.ipr
 *.iml
 *.iws
