--- a/calculator/pom.xml
+++ b/calculator/pom.xml
@@ -9,15 +9,13 @@
     <artifactId>uispec4j-root</artifactId>
     <version>2.5-SNAPSHOT</version>
   </parent>
-  <groupId>org.uispec4j</groupId>
   <artifactId>calculator</artifactId>
   <dependencies>
     <dependency>
       <groupId>org.testng</groupId>
       <artifactId>testng</artifactId>
-      <version>5.1</version>
+      <version>5.14.10</version>
       <scope>test</scope>
-      <classifier>jdk15</classifier>
     </dependency>
   </dependencies>
 
@@ -40,6 +38,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
+        <version>2.3.2</version>
         <configuration>
           <source>1.5</source>
           <target>1.5</target>
@@ -48,6 +47,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.10</version>
         <configuration>
           <systemProperties>
             <property>
@@ -70,7 +70,7 @@
               <dependency>
                 <groupId>org.uispec4j</groupId>
                 <artifactId>uispec4j</artifactId>
-                <version>${pom.version}</version>
+                <version>${project.version}</version>
                 <scope>test</scope>
                 <classifier>jdk5</classifier>
               </dependency>
@@ -85,7 +85,7 @@
           <dependency>
             <groupId>org.uispec4j</groupId>
             <artifactId>uispec4j</artifactId>
-            <version>${pom.version}</version>
+            <version>${project.version}</version>
             <scope>test</scope>
             <classifier>jdk6</classifier>
           </dependency>
@@ -100,7 +100,7 @@
           <dependency>
             <groupId>org.uispec4j</groupId>
             <artifactId>uispec4j</artifactId>
-            <version>${pom.version}</version>
+            <version>${project.version}</version>
             <scope>test</scope>
             <classifier>jdk7</classifier>
           </dependency>
