--- a/uispec4j/pom.xml
+++ b/uispec4j/pom.xml
@@ -103,8 +103,8 @@
   </developers>
 
   <scm>
-    <connection>scm:cvs:cvs.dev.java.net:/cvs/uispec4j</connection>
-    <url>https://uispec4j.dev.java.net/source/browse/uispec4j/</url>
+    <url>https://github.com/UISpec4J/UISpec4J</url>
+    <connection>scm:git:git://github.com/UISpec4J/UISpec4J.git</connection>
   </scm>
 
   <properties>
@@ -364,32 +364,6 @@
                 </configuration>
               </execution>
             </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-    <profile>
-      <id>ci-headless</id>
-      <dependencies>
-        <dependency>
-          <groupId>net.java.openjdk.cacio</groupId>
-          <artifactId>cacio-tta</artifactId>
-          <version>1.3</version>
-          <scope>test</scope>
-        </dependency>
-      </dependencies>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <configuration>
-              <systemPropertyVariables>
-                <java.awt.headless>false</java.awt.headless>
-                <awt.toolkit>net.java.openjdk.cacio.ctc.CTCToolkit</awt.toolkit>
-                <java.awt.graphicsenv>net.java.openjdk.cacio.ctc.CTCGraphicsEnvironment</java.awt.graphicsenv>
-              </systemPropertyVariables>
-            </configuration>
           </plugin>
         </plugins>
       </build>
