Removed parent relation between the UISpec4J project the root project. This relation was introduced after the last release and break the artifacts on the repository. Added ci-headless profile to uispec4j, this is needed because it no longer inherits it from the parent project. Remove JDK6 test from travis, project cacio-tta was build on JDK7, so will it fail on JDK6.

--- a/uispec4j/pom.xml
+++ b/uispec4j/pom.xml
@@ -13,11 +13,8 @@
 -->
   <modelVersion>4.0.0</modelVersion>
 
-  <parent>
-    <groupId>org.uispec4j</groupId>
-    <artifactId>uispec4j-root</artifactId>
-    <version>2.5-SNAPSHOT</version>
-  </parent>
+  <groupId>org.uispec4j</groupId>
+  <version>2.5-SNAPSHOT</version>
   <artifactId>uispec4j</artifactId>
 
   <dependencies>
@@ -99,6 +96,11 @@
       <name>Marc Guiot</name>
       <id>mguiot</id>
       <timezone>+1</timezone>
+    </developer>
+    <developer>
+      <name>Thomas Santana</name>
+      <id>nebulorum</id>
+      <timezone>-3</timezone>
     </developer>
   </developers>
 
@@ -364,6 +366,32 @@
                 </configuration>
               </execution>
             </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>ci-headless</id>
+      <dependencies>
+        <dependency>
+          <groupId>net.java.openjdk.cacio</groupId>
+          <artifactId>cacio-tta</artifactId>
+          <version>1.3</version>
+          <scope>test</scope>
+        </dependency>
+      </dependencies>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <systemPropertyVariables>
+                <java.awt.headless>false</java.awt.headless>
+                <awt.toolkit>net.java.openjdk.cacio.ctc.CTCToolkit</awt.toolkit>
+                <java.awt.graphicsenv>net.java.openjdk.cacio.ctc.CTCGraphicsEnvironment</java.awt.graphicsenv>
+              </systemPropertyVariables>
+            </configuration>
           </plugin>
         </plugins>
       </build>
