--- a/uispec4j/pom.xml
+++ b/uispec4j/pom.xml
@@ -130,7 +130,11 @@
             </property>
           </systemProperties>
           <redirectTestOutputToFile>true</redirectTestOutputToFile>
-          <forkMode>once</forkMode>
+          <forkCount>1</forkCount>
+          <reuseForks>true</reuseForks>
+          <threadCount>1</threadCount>
+          <parallel>methods</parallel>
+          <rerunFailingTestsCount>3</rerunFailingTestsCount>
         </configuration>
       </plugin>
     </plugins>
