--- a/addressbook/pom.xml
+++ b/addressbook/pom.xml
@@ -102,5 +102,19 @@
         </dependency>
       </dependencies>
     </profile>
+    <profile>
+      <id>jdk10</id>
+      <activation>
+        <jdk>10</jdk>
+      </activation>
+      <dependencies>
+        <dependency>
+          <groupId>org.uispec4j</groupId>
+          <artifactId>uispec4j</artifactId>
+          <version>${project.version}</version>
+          <classifier>jdk10</classifier>
+        </dependency>
+      </dependencies>
+    </profile>
   </profiles>
 </project>
