--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
   <repositories>
     <repository>
       <id>codehaus</id>
-      <url>http://http://repository.codehaus.org/</url>
+      <url>https://repository.codehaus.org/</url>
     </repository>
   </repositories>
 
