--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,19 +16,24 @@ on:
 
 jobs:
   build:
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        java-version: [ 8, 11 ]
 
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
+    - uses: actions/setup-java@v3
       with:
-        java-version: '11'
+        java-version: ${{ matrix.java-version }}
         distribution: 'temurin'
         cache: maven
+        
     - name: Build with Maven
-      run: mvn -P ci-headless clean test
+      run: mvn -P ci-headless -Pjdk${{ matrix.java-version }} clean test        
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
